@@ -1,0 +1,57 @@
+#NOTE have to define AR, RANLIB + WINDRES in Makefile after configure
+# need to undef main() in main routine, lots of WinMain@16 insanity...
+
+SDL_BUILD = /home/dash/code/SDL_win32/SDL-1.2.13
+CROSS = /usr/local/cross-tools/bin/i386-mingw32-
+
+#DBG += -g
+#DBG += -pg
+CC	= $(CROSS)gcc
+CFLAGS = -O2 -Wall $(DBG)
+CFLAGS += -I$(SDL_BUILD)/include
+CFLAGS += -D_GNU_SOURCE=1
+CFLAGS += -D_REENTRANT
+CFLAGS += -DWIN32_BUILD
+LDFLAGS = $(DBG) -lm $(SDL_BUILD)/build/.libs/SDL.dll
+
+# ftgrays standalone
+CFLAGS += -D_STANDALONE_
+
+
+all: basic
+basic: main.o basic.o font.o render.o keyboard.o ftgrays.o parse.o \
+	vmachine.o sound.o vdis.o help.o
+
+main.o: main.c misc.h
+basic.o: basic.c misc.h
+font.o: font.c misc.h
+render.o: render.c misc.h
+keyboard.o: keyboard.c misc.h
+parse.o: parse.c
+parse.c: grammar.y misc.h
+	bison -o $@ $<
+vmachine.o: vmachine.c misc.h
+sound.o: sound.c misc.h
+vdis.o: vdis.c misc.h
+help.o: help.c misc.h
+
+ftgrays.o: ftgrays.c ftgrays.h ftimage.h
+
+
+clean:
+	rm -f *.o basic parse.c
+
+test:	all
+	./basic
+
+WORK = /ram
+VER = 1.0.2
+DDIR = SDL_basic-$(VER)
+
+package:  clean
+	rm -rf $(WORK)/$(DDIR)
+	mkdir $(WORK)/$(DDIR)
+	cp *.c *.h *.y Makefile* README COPYING AUTHORS TODO $(WORK)/$(DDIR)
+	cp cool*.bas cubic.bas startrek1.bas wumpus.bas $(WORK)/$(DDIR)
+	cp INSTALL ChangeLog $(WORK)/$(DDIR)
+	cd $(WORK) && tar czf $(DDIR).tgz $(DDIR)
